# Material-Design-3-for-Qt-Quick-QML-

./: CMakeLists.txt  LICENSE  Main.qml  README.md  Theme.qml  main.cpp  stylemanager.cpp  stylemanager.h
assets/: IconData.js
components/: Breadcrumb.qml  Button.qml  Card.qml  Carousel.qml  Checkbox.qml  Chip.qml  CircularProgress.qml  ComboBox.qml  DatePicker.qml  Dialog.qml  FAB.qml  IconButton.qml  LinearProgress.qml  LoadingIndicator.qml  Menu.qml  NavigationBar.qml  NavigationDrawer.qml  RadioButton.qml  RangeSlider.qml  Ripple.qml  SegmentedButton.qml  SideSheet.qml  Slider.qml  Switch.qml  Tabs.qml  TextField.qml  TimePicker.qml  ToolTip.qml  TopAppBar.qml
material-color-utilities/blend/: blend.cc  blend.h  blend_test.cc
material-color-utilities/cam/: cam.cc  cam.h  cam_test.cc  hct.cc  hct.h  hct_solver.cc  hct_solver.h  hct_solver_test.cc  hct_test.cc  viewing_conditions.cc
material-color-utilities/contrast/: contrast.cc  contrast_test.cc
material-color-utilities/dislike/: dislike.cc  dislike.h  dislike_test.cc
material-color-utilities/dynamiccolor/: contrast_curve.h  dynamic_color.cc  dynamic_color.h  dynamic_scheme.cc  dynamic_scheme.h  material_dynamic_colors.cc  material_dynamic_colors.h  tone_delta_pair.h
material-color-utilities/palettes/: core.h  tones.cc  tones.h  tones_test.cc
material-color-utilities/quantize/: celebi.cc  celebi.h  celebi_test.cc  lab.cc  lab.h  wsmeans.cc  wsmeans.h  wsmeans_test.cc  wu.cc  wu.h  wu_test.cc
material-color-utilities/scheme/: scheme_content.cc  scheme_content.h  scheme_expressive.cc  scheme_expressive.h  scheme_fidelity.cc  scheme_fidelity.h  scheme_fruit_salad.cc  scheme_fruit_salad.h  scheme_monochrome.cc  scheme_monochrome.h  scheme_monochrome_test.cc  scheme_neutral.cc  scheme_neutral.h  scheme_rainbow.cc  scheme_rainbow.h  scheme_tonal_spot.cc  scheme_tonal_spot.h  scheme_vibrant.cc  scheme_vibrant.h
material-color-utilities/score/: score.cc  score.h  score_test.cc
material-color-utilities/temperature/: temperature_cache.cc  temperature_cache.h  temperature_cache_test.cc
material-color-utilities/utils/: utils.cc  utils_test.cc
pages/: AboutPage.qml  ColorPage.qml  ComponentsPage.qml  HomePage.qml  IconPage.qml  NavigationPage.qml  SettingsPage.qml  TypographyPage.qml  WidgetsPage.qml
